--- a/arch/arm64/configs/wahoo_defconfig
+++ b/arch/arm64/configs/wahoo_defconfig
@@ -747,6 +747,7 @@ CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_LOCKUP_DETECTOR=y
+CONFIG_FRAME_WARN=0
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHEDSTATS=y
