--- a/arch/arm64/configs/wahoo_defconfig
+++ b/arch/arm64/configs/wahoo_defconfig
@@ -634,8 +634,7 @@ CONFIG_QPNP_REVID=y
 CONFIG_QPNP_COINCELL=y
 CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_NDP_BAM=y
-CONFIG_IPA=y
-CONFIG_RMNET_IPA=y
+# CONFIG_IPA is not set
 CONFIG_GSI=y
 CONFIG_IPA3=y
 CONFIG_RMNET_IPA3=y
