--- a/arch/arm64/configs/wahoo_defconfig
+++ b/arch/arm64/configs/wahoo_defconfig
@@ -1,6 +1,7 @@
 CONFIG_LOCALVERSION="-XenialV2-RC3"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_KERNEL_LZ4=y
+CONFIG_LTO=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
